--- a/index.html
+++ b/index.html
@@ -2208,7 +2208,7 @@ Note
 <p><strong>Week 01:</strong> This is our first week as group, we are trying to compile a summary of introductions!</p>
 <p><strong>Week 02:</strong> We tried to add more articles from our research and narrowing on a particular dataset!</p>
 <p><strong>Week 03:</strong> Downloaded USA cancer dataset, exploring attributes and records for our study!</p>
-<p><strong>Week 04:</strong> Analysed the variable, selected and recoded for our model !</p>
+<p><strong>Week 04:</strong> Analysed the variables, selected and recoded for our model!</p>
 <p>Nice effort!</p>
 </div>
 </div>
@@ -3466,7 +3466,7 @@ Note
 <tr class="header">
 <th style="text-align: left;">Veritable Name</th>
 <th style="text-align: left;">Description</th>
-<th style="text-align: left;">Seer Codes (2018-2022</th>
+<th style="text-align: left;">Seer Codes (2018-2022)</th>
 <th style="text-align: left;">Recoding for modeling</th>
 </tr>
 </thead>
@@ -3509,7 +3509,8 @@ Note
 </tr>
 </tbody>
 </table>
-<p>Table 2 <strong><em>Treatment Characteristics</em></strong></p>
+<p>Table 2</p>
+<p><strong><em>Treatment Characteristics</em></strong></p>
 <table class="caption-top table">
 <colgroup>
 <col style="width: 17%">
@@ -3521,7 +3522,7 @@ Note
 <tr class="header">
 <th style="text-align: left;">Veritable Name</th>
 <th style="text-align: left;">Description</th>
-<th style="text-align: left;">Seer Codes (2018-2022</th>
+<th style="text-align: left;">Seer Codes (2018-2022)</th>
 <th style="text-align: left;">Recoding for modeling</th>
 </tr>
 </thead>
@@ -3619,7 +3620,7 @@ Note
 <tr class="header">
 <th style="text-align: left;">Veritable Name</th>
 <th style="text-align: left;">Description</th>
-<th style="text-align: left;">Seer Codes (2018-2022</th>
+<th style="text-align: left;">Seer Codes (2018-2022)</th>
 <th style="text-align: left;">Recoding for modeling</th>
 </tr>
 </thead>
