--- a/index.html
+++ b/index.html
@@ -2349,6 +2349,7 @@ Note
 <p><strong>Week 03:</strong> Downloaded USA cancer dataset, exploring attributes and records for our study!</p>
 <p><strong>Week 04:</strong> Analysed the variables, selected and recoded for our model!</p>
 <p><strong>Week 05:</strong> Refined the variables, as metadata and data were not matching!</p>
+<p><strong>Week 06:</strong> Started coding in R studio!</p>
 <p>Nice effort!</p>
 </div>
 </div>
@@ -2588,6 +2589,7 @@ Note
 </section>
 <section id="analysis-and-results" class="level2">
 <h2 class="anchored" data-anchor-id="analysis-and-results">Analysis and Results</h2>
+<p>R output: <a href="LR_regression.nb.html" target="_blank">LR_regression.html</a></p>
 </section>
 <section id="modeling-and-results" class="level2">
 <h2 class="anchored" data-anchor-id="modeling-and-results">Modeling and Results</h2>
